k8s/express-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service-service
spec:
  type: ClusterIP
  selector:
    app: express-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
