k8s/flask-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-service
spec:
  type: ClusterIP
  selector:
    app: flask-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
